--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -20,7 +20,8 @@ snapshot-paths: ["snapshots"]
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
+vars:
+  'dbt_date:time_zone': 'America/Los_Angeles'
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -33,3 +34,5 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+seeds:
+  +schema: public
