--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - package: calogica/dbt_expectations
-    version: [">=0.10.0", "<0.11.0"]
+  - package: metaplane/dbt_expectations
+    version: 0.10.9
